// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Match snapshot 1`] = `
<div
  className="container"
>
  <div
    className="tile"
  >
    <div
      className="content"
    >
      <div
        className="left"
      >
        <img
          alt="Tile graphic"
          src="image"
        />
      </div>
      <div>
        <div
          className="lead"
        >
          title
        </div>
        <div>
          Foo
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Match snapshot with button 1`] = `
<div
  className="container"
>
  <div
    className="tile"
  >
    <div
      className="content"
    >
      <div
        className="left"
      >
        <img
          alt="Tile graphic"
          src="image"
        />
      </div>
      <div>
        <div
          className="lead"
        >
          title
        </div>
        <div>
          Foo
        </div>
        <button
          className="secondary button  linkOnDesktop"
          onClick={[MockFunction]}
        >
          buttonText
        </button>
      </div>
    </div>
  </div>
</div>
`;
